opt: Replace ix-java with java stream API